Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tres Metros Sobre El Cielo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Aguas siniestras -->
+<li>
+  <a href="../Peliculas/pelicula804.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/bHy9CZdMeH1cnQnsTcyaGu7Yiz.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Aguas siniestras 2024</span>
+    <span class="hidden">Ray Waller es un ex jugador de béisbol de las grandes ligas obligado a jubilarse anticipadamente por una enfermedad degenerativa. Se muda a una nueva casa con su preocupada esposa Eve y sus dos hijos. Con la esperanza secreta, contra todo pronóstico, de volver al béisbol profesional, Ray convence a Eve de que la resplandeciente piscina del patio trasero de la nueva casa será divertida para los niños y le brindará fisioterapia. Pero un oscuro secreto en el pasado del hogar desatará una fuerza malévola que arrastrará a la familia a las profundidades de un terror ineludible.</span>
+  </a>
+</li>
+<!--FIN--><!-- Tres Metros Sobre El Cielo -->
 <li>
   <a href="../Peliculas/pelicula803.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
