--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/bHy9CZdMeH1cnQnsTcyaGu7Yiz.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Aguas siniestras 2024</span>
-    <span class="hidden">Ray Waller es un ex jugador de béisbol de las grandes ligas obligado a jubilarse anticipadamente por una enfermedad degenerativa. Se muda a una nueva casa con su preocupada esposa Eve y sus dos hijos. Con la esperanza secreta, contra todo pronóstico, de volver al béisbol profesional, Ray convence a Eve de que la resplandeciente piscina del patio trasero de la nueva casa será divertida para los niños y le brindará fisioterapia. Pero un oscuro secreto en el pasado del hogar desatará una fuerza malévola que arrastrará a la familia a las profundidades de un terror ineludible.</span>
+    <span class="hidden">la pisina piscina picina Ray Waller es un ex jugador de béisbol de las grandes ligas obligado a jubilarse anticipadamente por una enfermedad degenerativa. Se muda a una nueva casa con su preocupada esposa Eve y sus dos hijos. Con la esperanza secreta, contra todo pronóstico, de volver al béisbol profesional, Ray convence a Eve de que la resplandeciente piscina del patio trasero de la nueva casa será divertida para los niños y le brindará fisioterapia. Pero un oscuro secreto en el pasado del hogar desatará una fuerza malévola que arrastrará a la familia a las profundidades de un terror ineludible.</span>
   </a>
 </li>
 <!--FIN--><!-- Tres Metros Sobre El Cielo -->
@@ -109,7 +109,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/nNoMfNPnvEzGADXDkP6eJAP81KB.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Tres Metros Sobre El Cielo 2010</span>
-    <span class="hidden">Historia de dos jóvenes que pertenecen a mundos diferentes. Es la crónica de un amor improbable, casi imposible pero inevitable arrastrando en un viaje frenético descubren el primer gran amor. Babi (Maria Valverde) es una chica de clase media alta que se educa en la bondad y la inocencia. Hache (Mario Casas) es un niño rebelde, impulsivo, inconsciente, tiene un apetito de riesgo y peligro encarnado en peleas interminables y carreras ilegales de motos, el límite del sentido común</span>
+    <span class="hidden">a 3 Historia de dos jóvenes que pertenecen a mundos diferentes. Es la crónica de un amor improbable, casi imposible pero inevitable arrastrando en un viaje frenético descubren el primer gran amor. Babi (Maria Valverde) es una chica de clase media alta que se educa en la bondad y la inocencia. Hache (Mario Casas) es un niño rebelde, impulsivo, inconsciente, tiene un apetito de riesgo y peligro encarnado en peleas interminables y carreras ilegales de motos, el límite del sentido común</span>
   </a>
 </li>
 <!--FIN--><!-- Fuera de mi -->
@@ -118,7 +118,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/wLx4hKEln8fEUKL3mJu3CCsp1Uz.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Fuera de mí 2024</span>
-    <span class="hidden">Melody Brooks, estudiante de sexto grado, tiene parálisis cerebral, es ingeniosa y posee una mente aguda. Sin embargo, ya que no habla y usa una silla de ruedas, no le dan las mismas oportunidades que a sus compañeros. Una joven docente descubre el potencial desaprovechado de Melody, y ella empieza a participar en clases convencionales. Melody demuestra que sus palabras importan más que la forma de decirlas.</span>
+    <span class="hidden">el silencio de las palabras Melody Brooks, estudiante de sexto grado, tiene parálisis cerebral, es ingeniosa y posee una mente aguda. Sin embargo, ya que no habla y usa una silla de ruedas, no le dan las mismas oportunidades que a sus compañeros. Una joven docente descubre el potencial desaprovechado de Melody, y ella empieza a participar en clases convencionales. Melody demuestra que sus palabras importan más que la forma de decirlas.</span>
   </a>
 </li>
 <!--FIN--><!-- Marvel Zombies -->
