Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Aguas siniestras -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Ilusionistas: Nada es lo que Parece -->
+<li>
+  <a href="../Peliculas/pelicula805.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/iN3fPrPLozgPDrHO1IILh1Cx0C3.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Ilusionistas: Nada es lo que Parece 2013</span>
+    <span class="hidden">Un agente del FBI y un detective de la Interpol siguen la pista de un equipo de ilusionistas que cometen atracos a bancos durante sus actuaciones, y recompensan a su público con el dinero.</span>
+  </a>
+</li>
+<!--FIN--><!-- Aguas siniestras -->
 <li>
   <a href="../Peliculas/pelicula804.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
