--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Ilusionistas: Nada es lo que Parece -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Ilusionistas 2 -->
+<li>
+  <a href="../Peliculas/pelicula806.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/pjGt13AXXTLxvkmdF6SpA1feFOw.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Ilusionistas 2 2016</span>
+    <span class="hidden">Los Cuatro Jinetes reaparecen y son reclutados a la fuerza por un genio de la tecnología para llevar a cabo su atraco más imposible.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Ilusionistas: Nada es lo que Parece -->
 <li>
   <a href="../Peliculas/pelicula805.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
