--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/pjGt13AXXTLxvkmdF6SpA1feFOw.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Los Ilusionistas 2 2016</span>
-    <span class="hidden">Los Cuatro Jinetes reaparecen y son reclutados a la fuerza por un genio de la tecnología para llevar a cabo su atraco más imposible.</span>
+    <span class="hidden">ahora me ves... ves.. ves. ves vez... vez.. vez. vez Los Cuatro Jinetes reaparecen y son reclutados a la fuerza por un genio de la tecnología para llevar a cabo su atraco más imposible.</span>
   </a>
 </li>
 <!--FIN--><!-- Los Ilusionistas: Nada es lo que Parece -->
@@ -109,7 +109,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/iN3fPrPLozgPDrHO1IILh1Cx0C3.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Los Ilusionistas: Nada es lo que Parece 2013</span>
-    <span class="hidden">Un agente del FBI y un detective de la Interpol siguen la pista de un equipo de ilusionistas que cometen atracos a bancos durante sus actuaciones, y recompensan a su público con el dinero.</span>
+    <span class="hidden">ahora me ves... ves.. ves. ves vez... vez.. vez. vez 1 Un agente del FBI y un detective de la Interpol siguen la pista de un equipo de ilusionistas que cometen atracos a bancos durante sus actuaciones, y recompensan a su público con el dinero.</span>
   </a>
 </li>
 <!--FIN--><!-- Aguas siniestras -->
