--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Marvel Zombies -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Jovenes Titanes: Mision Tokio -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula807.html">
+    <img src="https://image.tmdb.org/t/p/original/qaDfL5fQru8ecfCrpCMH1T4dSaR.jpg" alt="Los Jovenes Titanes: Misión Tokio" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los Jovenes Titanes: Misión Tokio</div>
+  <div class="text-xs text-white/70">2006</div>
+</article><!-- Marvel Zombies -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie92.html">
     <img src="https://image.tmdb.org/t/p/original/4WOpUjQPZCb0NmH1CasNNBQ8UHS.jpg" alt="Marvel Zombies" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
