Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Ilusionistas 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Jovenes Titanes: Mision Tokio -->
+<li>
+  <a href="../Peliculas/pelicula807.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/qaDfL5fQru8ecfCrpCMH1T4dSaR.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Jovenes Titanes: Misión Tokio 2006</span>
+    <span class="hidden">Cuando unos ninjas con altas tecnologías atacan la torre de la ciudad, Robin, Starfire, Cyborg, Raven y Beast Boy entran en acción. Robin descubre que los ninjas han sido enviados por el misterioso y amenazante criminal japonés conocido como Brushogun, por lo que los titanes deberán viajar hasta Tokio para detener al villano.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Ilusionistas 2 -->
 <li>
   <a href="../Peliculas/pelicula806.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
