Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Jovenes Titanes: Mision Tokio -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La era de hielo -->
+<li>
+  <a href="../Peliculas/pelicula808.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/9rpdhn7p7mDZW2rUXsINf9c6sR5.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La era de hielo 2002</span>
+    <span class="hidden">La historia gira en torno a unos héroes bajo cero: un mamut lanudo, un tigre de dientes de sable, un perezoso y una combinación prehistórica de ardilla y rata, conocida como Scrat.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Jovenes Titanes: Mision Tokio -->
 <li>
   <a href="../Peliculas/pelicula807.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
