--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La era de hielo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La era de hielo 2 -->
+<li>
+  <a href="../Peliculas/pelicula809.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/q3D7vBGrJVrVrZSJjVQN8lN0e6c.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La era de hielo 2 2006</span>
+    <span class="hidden">Después de los hechos de la primera película, Manny, Sid, Diego y el resto de los animales tendran que dejar su hogar para evitar una inundación provocado por Scrat, quien busca poder agarrar su bellota. En el camino, Manny se encuentra que con Ellie, una mamut que se confunde con ser una mamut como una zarigüeya.</span>
+  </a>
+</li>
+<!--FIN--><!-- La era de hielo -->
 <li>
   <a href="../Peliculas/pelicula808.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
