Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La era de hielo 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La era de hielo 3 -->
+<li>
+  <a href="../Peliculas/pelicula810.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zufHIdp8szvgkt8VCnJEF2fo1tN.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La era de hielo 3 2009</span>
+    <span class="hidden">Ahora que Manny y Ellie van a tener una hija, Manny se asegura de que sea un buen padre, Diego piensa dejar la manada y Sid roba 3 huevos de dinosaurio y luego es capturado por un dinosaurio. La manada entra al mundo subterraneo y van a tener la ayuda de Buck, una comadreja. Mientras tanto, Scrat se enamora de Scratty, una ardilla dientes de sable que tambien se interesa en la bellota.</span>
+  </a>
+</li>
+<!--FIN--><!-- La era de hielo 2 -->
 <li>
   <a href="../Peliculas/pelicula809.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
