Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La era de hielo 4 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La era de hielo: Choque de mundos -->
+<li>
+  <a href="../Peliculas/pelicula812.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/vgxlqI40AUXmpBzcwlLsYZI5EcR.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La era de hielo: Choque de mundos 2016</span>
+    <span class="hidden">Scrat y su mítica bellota estan en el espacio, donde accidentalmente desencadenará una serie de acontecimientos que amenazarán la Edad de Hielo. Para salvarse, Sid, Manny, Diego y el resto de la manada deberán salir de su hogar y embarcarse en una nueva aventura.</span>
+  </a>
+</li>
+<!--FIN--><!-- La era de hielo 4 -->
 <li>
   <a href="../Peliculas/pelicula811.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
