--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La era de hielo: Choque de mundos -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La emboscada -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula813.html">
+    <img src="https://image.tmdb.org/t/p/original/33TgkZ5XuVPCarCSylm3g8iYK1k.jpg" alt="La emboscada" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">La emboscada</div>
+  <div class="text-xs text-white/70">1999</div>
+</article><!-- La era de hielo: Choque de mundos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula812.html">
     <img src="https://image.tmdb.org/t/p/original/vgxlqI40AUXmpBzcwlLsYZI5EcR.jpg" alt="La era de hielo: Choque de mundos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
