Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La era de hielo: Choque de mundos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La emboscada -->
+<li>
+  <a href="../Peliculas/pelicula813.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/33TgkZ5XuVPCarCSylm3g8iYK1k.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La emboscada 1999</span>
+    <span class="hidden">Siguiendo la pista de una valiosa pieza de arte robada, la agente de seguros Gin Baker convence a su compañía para que le permitan llevar a cabo un golpe en colaboración con un prestigioso y veterano ladrón, Robert "Mac" MacDouglas. Pero Mac la someterá a una serie de duros entrenamientos y pruebas antes de confiar en ella.</span>
+  </a>
+</li>
+<!--FIN--><!-- La era de hielo: Choque de mundos -->
 <li>
   <a href="../Peliculas/pelicula812.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
