--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/33TgkZ5XuVPCarCSylm3g8iYK1k.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">La emboscada 1999</span>
-    <span class="hidden">Siguiendo la pista de una valiosa pieza de arte robada, la agente de seguros Gin Baker convence a su compañía para que le permitan llevar a cabo un golpe en colaboración con un prestigioso y veterano ladrón, Robert "Mac" MacDouglas. Pero Mac la someterá a una serie de duros entrenamientos y pruebas antes de confiar en ella.</span>
+    <span class="hidden">trampa Siguiendo la pista de una valiosa pieza de arte robada, la agente de seguros Gin Baker convence a su compañía para que le permitan llevar a cabo un golpe en colaboración con un prestigioso y veterano ladrón, Robert "Mac" MacDouglas. Pero Mac la someterá a una serie de duros entrenamientos y pruebas antes de confiar en ella.</span>
   </a>
 </li>
 <!--FIN--><!-- La era de hielo: Choque de mundos -->
@@ -109,7 +109,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/vgxlqI40AUXmpBzcwlLsYZI5EcR.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">La era de hielo: Choque de mundos 2016</span>
-    <span class="hidden">Scrat y su mítica bellota estan en el espacio, donde accidentalmente desencadenará una serie de acontecimientos que amenazarán la Edad de Hielo. Para salvarse, Sid, Manny, Diego y el resto de la manada deberán salir de su hogar y embarcarse en una nueva aventura.</span>
+    <span class="hidden">hera ice age edad  el gran cataclismo 5 Scrat y su mítica bellota estan en el espacio, donde accidentalmente desencadenará una serie de acontecimientos que amenazarán la Edad de Hielo. Para salvarse, Sid, Manny, Diego y el resto de la manada deberán salir de su hogar y embarcarse en una nueva aventura.</span>
   </a>
 </li>
 <!--FIN--><!-- La era de hielo 4 -->
@@ -118,7 +118,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/qYiZOCXkOYtYfolUUdJKoZ8xPsL.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">La era de hielo 4 2012</span>
-    <span class="hidden">La loca persecución de Scrat por su escurridiza bellota desde el principio de los tiempos, tiene consecuencias que cambiarán el mundo: un cataclismo continental que desencadenará la mayor de las aventuras para Manny, Diego y Sid. En medio de estas agitaciones, Sid se reencuentra con su Abuelita Gruñona y la manada tropieza con una extraña cuadrilla de piratas de altamar decididos a impedirles su regreso a casa.</span>
+    <span class="hidden">hera ice age edad  la formacion de los continentes La loca persecución de Scrat por su escurridiza bellota desde el principio de los tiempos, tiene consecuencias que cambiarán el mundo: un cataclismo continental que desencadenará la mayor de las aventuras para Manny, Diego y Sid. En medio de estas agitaciones, Sid se reencuentra con su Abuelita Gruñona y la manada tropieza con una extraña cuadrilla de piratas de altamar decididos a impedirles su regreso a casa.</span>
   </a>
 </li>
 <!--FIN--><!-- La era de hielo 3 -->
@@ -127,7 +127,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/zufHIdp8szvgkt8VCnJEF2fo1tN.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">La era de hielo 3 2009</span>
-    <span class="hidden">Ahora que Manny y Ellie van a tener una hija, Manny se asegura de que sea un buen padre, Diego piensa dejar la manada y Sid roba 3 huevos de dinosaurio y luego es capturado por un dinosaurio. La manada entra al mundo subterraneo y van a tener la ayuda de Buck, una comadreja. Mientras tanto, Scrat se enamora de Scratty, una ardilla dientes de sable que tambien se interesa en la bellota.</span>
+    <span class="hidden">hera ice age edad el origen de los dinosauros Ahora que Manny y Ellie van a tener una hija, Manny se asegura de que sea un buen padre, Diego piensa dejar la manada y Sid roba 3 huevos de dinosaurio y luego es capturado por un dinosaurio. La manada entra al mundo subterraneo y van a tener la ayuda de Buck, una comadreja. Mientras tanto, Scrat se enamora de Scratty, una ardilla dientes de sable que tambien se interesa en la bellota.</span>
   </a>
 </li>
 <!--FIN--><!-- La era de hielo 2 -->
@@ -136,7 +136,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/q3D7vBGrJVrVrZSJjVQN8lN0e6c.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">La era de hielo 2 2006</span>
-    <span class="hidden">Después de los hechos de la primera película, Manny, Sid, Diego y el resto de los animales tendran que dejar su hogar para evitar una inundación provocado por Scrat, quien busca poder agarrar su bellota. En el camino, Manny se encuentra que con Ellie, una mamut que se confunde con ser una mamut como una zarigüeya.</span>
+    <span class="hidden">hera ice age edad el deshielo  Después de los hechos de la primera película, Manny, Sid, Diego y el resto de los animales tendran que dejar su hogar para evitar una inundación provocado por Scrat, quien busca poder agarrar su bellota. En el camino, Manny se encuentra que con Ellie, una mamut que se confunde con ser una mamut como una zarigüeya.</span>
   </a>
 </li>
 <!--FIN--><!-- La era de hielo -->
@@ -145,7 +145,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/9rpdhn7p7mDZW2rUXsINf9c6sR5.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">La era de hielo 2002</span>
-    <span class="hidden">La historia gira en torno a unos héroes bajo cero: un mamut lanudo, un tigre de dientes de sable, un perezoso y una combinación prehistórica de ardilla y rata, conocida como Scrat.</span>
+    <span class="hidden">hera ice age edad La historia gira en torno a unos héroes bajo cero: un mamut lanudo, un tigre de dientes de sable, un perezoso y una combinación prehistórica de ardilla y rata, conocida como Scrat.</span>
   </a>
 </li>
 <!--FIN--><!-- Los Jovenes Titanes: Mision Tokio -->
@@ -154,7 +154,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/qaDfL5fQru8ecfCrpCMH1T4dSaR.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Los Jovenes Titanes: Misión Tokio 2006</span>
-    <span class="hidden">Cuando unos ninjas con altas tecnologías atacan la torre de la ciudad, Robin, Starfire, Cyborg, Raven y Beast Boy entran en acción. Robin descubre que los ninjas han sido enviados por el misterioso y amenazante criminal japonés conocido como Brushogun, por lo que los titanes deberán viajar hasta Tokio para detener al villano.</span>
+    <span class="hidden">tokyo Cuando unos ninjas con altas tecnologías atacan la torre de la ciudad, Robin, Starfire, Cyborg, Raven y Beast Boy entran en acción. Robin descubre que los ninjas han sido enviados por el misterioso y amenazante criminal japonés conocido como Brushogun, por lo que los titanes deberán viajar hasta Tokio para detener al villano.</span>
   </a>
 </li>
 <!--FIN--><!-- Los Ilusionistas 2 -->
