Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La emboscada -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un lugar para sonar -->
+<li>
+  <a href="../Series/serie93.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zZlyJhRyPzfq6Y5rZ7aWtiPI8Lo.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Un lugar para soñar 2019</span>
+    <span class="hidden">Melinda Monroe quiere empezar de cero y dejar Los Angeles, así que contesta a un anuncio para trabajar de enfermera en Virgin River, un pueblo remoto del norte de California cerca de las montañas rocosas. Pero una vez allí descubre que la vida no es tan sencilla como esperaba.</span>
+  </a>
+</li>
+<!--FIN--><!-- La emboscada -->
 <li>
   <a href="../Peliculas/pelicula813.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
