--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/zZlyJhRyPzfq6Y5rZ7aWtiPI8Lo.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Un lugar para soñar 2019</span>
-    <span class="hidden">Melinda Monroe quiere empezar de cero y dejar Los Angeles, así que contesta a un anuncio para trabajar de enfermera en Virgin River, un pueblo remoto del norte de California cerca de las montañas rocosas. Pero una vez allí descubre que la vida no es tan sencilla como esperaba.</span>
+    <span class="hidden">Virgin Rivers Melinda Monroe quiere empezar de cero y dejar Los Angeles, así que contesta a un anuncio para trabajar de enfermera en Virgin River, un pueblo remoto del norte de California cerca de las montañas rocosas. Pero una vez allí descubre que la vida no es tan sencilla como esperaba.</span>
   </a>
 </li>
 <!--FIN--><!-- La emboscada -->
