--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La era de hielo: Choque de mundos -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Una pelicula de huevos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula814.html">
+    <img src="https://image.tmdb.org/t/p/original/sWl9Qhv8PZyq6gviDeT88kBU3tI.jpg" alt="Una película de huevos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Una película de huevos</div>
+  <div class="text-xs text-white/70">2006</div>
+</article><!-- La era de hielo: Choque de mundos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula812.html">
     <img src="https://image.tmdb.org/t/p/original/vgxlqI40AUXmpBzcwlLsYZI5EcR.jpg" alt="La era de hielo: Choque de mundos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
