Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un lugar para sonar -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Una pelicula de huevos -->
+<li>
+  <a href="../Peliculas/pelicula814.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/sWl9Qhv8PZyq6gviDeT88kBU3tI.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Una película de huevos 2006</span>
+    <span class="hidden">Un pequeño huevo llamado Toto decide que quiere cumplir su propósito en la vida y convertirse en un pollo en lugar de morir en una sartén; por lo que comienza una búsqueda para regresar a las granjas junto con su nuevo amigo, el ruidoso huevo Willy y una loca raya de tocino. Los tres amigos enfrentarán muchos obstáculos en su búsqueda.</span>
+  </a>
+</li>
+<!--FIN--><!-- Un lugar para sonar -->
 <li>
   <a href="../Series/serie93.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
