Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Una pelicula de huevos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Huevitos Congelados -->
+<li>
+  <a href="../Peliculas/pelicula815.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/d7i9UXE7IfPx2uYtYKzgjs6zYzR.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Huevitos Congelados 2022</span>
+    <span class="hidden">En esta nueva aventura Toto y su familia tendrán que viajar al Polo Sur para cumplir la promesa que le hace a su madre antes de morir; para lograrlo, tendrán que vencer algunos obstáculos que les enseñaran lo importante que es el trabajo en equipo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Una pelicula de huevos -->
 <li>
   <a href="../Peliculas/pelicula814.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
