Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Huevitos Congelados -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Lorax: En Busca De La Trufula Perdida -->
+<li>
+  <a href="../Peliculas/pelicula816.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/b7FMtquHglzxIi938cHIgVQuPx5.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Lórax: En Busca De La Trúfula Perdida 2012</span>
+    <span class="hidden">Un chico se propone conquistar el afecto de la chica de sus sueños. Para conseguirlo, debe averiguar la historia del Lorax, una encantadora aunque gruñona criatura que lucha por proteger un mundo en vías de extinción.</span>
+  </a>
+</li>
+<!--FIN--><!-- Huevitos Congelados -->
 <li>
   <a href="../Peliculas/pelicula815.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
