--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Lorax: En Busca De La Trufula Perdida -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Halloween -->
+<li>
+  <a href="../Peliculas/pelicula817.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/tRwuTL3KhU03MA2EkXNdRXhH49V.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Halloween 2018</span>
+    <span class="hidden">Jamie Lee Curtis regresa a su papel icónico como Laurie Strode, quien llega a su enfrentamiento final con Michael Myers, la figura enmascarada que la ha perseguido desde que escapó por poco de su juerga de asesinatos en la noche de Halloween de hace cuatro décadas. Esta película, la undécima película de la serie "Halloween", ignorará los eventos de todas las secuelas anteriores, retomando 40 años después de los eventos de la película original.</span>
+  </a>
+</li>
+<!--FIN--><!-- Lorax: En Busca De La Trufula Perdida -->
 <li>
   <a href="../Peliculas/pelicula816.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
