Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Halloween -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Antes de Partir -->
+<li>
+  <a href="../Peliculas/pelicula818.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/bBgc1F5o6PMOxTPrOoZ3oIkP2KT.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Antes de Partir 2007</span>
+    <span class="hidden">Una pareja de enfermos terminales de cáncer, de caracteres y mundos completamente opuestos, entablan amistad. Edward Cole es un engreído millonario mientras que Carter Chambers es un modesto mecánico. A pesar de todo, deciden emprender juntos un último viaje para poder hacer, antes de morir, todas las cosas que siempre han deseado.</span>
+  </a>
+</li>
+<!--FIN--><!-- Halloween -->
 <li>
   <a href="../Peliculas/pelicula817.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
