--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/bBgc1F5o6PMOxTPrOoZ3oIkP2KT.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Antes de Partir 2007</span>
-    <span class="hidden">Una pareja de enfermos terminales de cáncer, de caracteres y mundos completamente opuestos, entablan amistad. Edward Cole es un engreído millonario mientras que Carter Chambers es un modesto mecánico. A pesar de todo, deciden emprender juntos un último viaje para poder hacer, antes de morir, todas las cosas que siempre han deseado.</span>
+    <span class="hidden">ahora o nunca Una pareja de enfermos terminales de cáncer, de caracteres y mundos completamente opuestos, entablan amistad. Edward Cole es un engreído millonario mientras que Carter Chambers es un modesto mecánico. A pesar de todo, deciden emprender juntos un último viaje para poder hacer, antes de morir, todas las cosas que siempre han deseado.</span>
   </a>
 </li>
 <!--FIN--><!-- Halloween -->
