Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Antes de Partir -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Simon -->
+<li>
+  <a href="../Peliculas/pelicula819.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/sllxb3Ydr9Rgjl1MuL7tT37ap35.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Simón 2023</span>
+    <span class="hidden">Simón narra la apasionante y sentida historia de un joven luchador por la libertad que escapa de las garras del régimen venezolano y se traslada a Miami, donde ahora lucha contra sus traumas y su sentimiento de culpa mientras intenta conseguir asilo político antes de que lo devuelvan a la fuerza a su país.</span>
+  </a>
+</li>
+<!--FIN--><!-- Antes de Partir -->
 <li>
   <a href="../Peliculas/pelicula818.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
