--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Simon -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mea Culpa -->
+<li>
+  <a href="../Peliculas/pelicula820.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/roxD9VCTTXYfPjVj9HiSC5IMtc7.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mea Culpa 2024</span>
+    <span class="hidden">Después de aceptar el caso de un artista acusado de asesinato, una abogada defensora se ve forzada a elegir entre su familia, el deber y sus instintos más básicos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Simon -->
 <li>
   <a href="../Peliculas/pelicula819.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
