--- a/Categorias/drama/index.html
+++ b/Categorias/drama/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mea Culpa -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Max -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula821.html">
+    <img src="https://image.tmdb.org/t/p/original/d3ACos3t4YwXML8keTA0wKN8e36.jpg" alt="Max" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Max</div>
+  <div class="text-xs text-white/70">2015</div>
+</article><!-- Mea Culpa -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula820.html">
     <img src="https://image.tmdb.org/t/p/original/roxD9VCTTXYfPjVj9HiSC5IMtc7.jpg" alt="Mea Culpa" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
