Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mea Culpa -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Max -->
+<li>
+  <a href="../Peliculas/pelicula821.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/d3ACos3t4YwXML8keTA0wKN8e36.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Max 2015</span>
+    <span class="hidden">Un perro que ayudó a los soldados norteamericanos en Afganistán regresa a los Estados Unidos y es adoptado por la familia de su adiestrador, después de sufrir una experiencia traumática.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mea Culpa -->
 <li>
   <a href="../Peliculas/pelicula820.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
