Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Max -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Alice in Borderland -->
+<li>
+  <a href="../Series/serie94.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/xcOnCOpwe86Deau7P1VQNe0X6cg.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Alice in Borderland 2020</span>
+    <span class="hidden">Un chico obsesionado con los videojuegos se transporta con dos amigos a una realidad paralela y postapocalíptica de Tokio donde cada nivel es de vida o muerte.</span>
+  </a>
+</li>
+<!--FIN--><!-- Max -->
 <li>
   <a href="../Peliculas/pelicula821.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
